--- a/web/assets/css/layout.css
+++ b/web/assets/css/layout.css
@@ -121,7 +121,7 @@ body {
 
 /*home pade*/
 #hero {
-    background-image: url("img/hero4.png");
+    background-image: url("/phpCrud/web/assets/img/hero4.png");
     height: 90vh;
     width: 100%;
     background-size: cover;
