--- a/web/assets/css/layout.css
+++ b/web/assets/css/layout.css
@@ -202,7 +202,7 @@ body {
 
 #products1 .pro-container {
     display: flex;
-    justify-content: space-between;
+    gap: 20px;
     padding-top: 20px;
     flex-wrap: wrap;
 }
